Bug 1966887 - Remove the assertion in `EnsurePrecedingPointerRawUpdate()` which checks recursive calls r=smaug

The assertion was intended to detect unexpected recursive event dispatching of
`ePointerRawUpdate`.  However, if may occur if spinning the event loop with
opening a modal dialog or synchronous XHR.  Therefore, the assertion may fail
even in the valid situations.

The crash reports are caused by synthesized `eMouseMove`.  However, it'll be
checked after getting `WidgetMousePointer*` after the removing assertion.
So, the case is correctly handled anyway.

Differential Revision: https://phabricator.services.mozilla.com/D249871